test/fixtures/source-map/output/source_map_throw_first_tick.snapshot
reachable
node:diagnostics_channel:315
        throw err;
        ^

Error: an exception
    at branch (*typescript-throw.ts:18:11)
    at Object.<anonymous> (*typescript-throw.ts:24:1)

Node.js *
